--- a/style.css
+++ b/style.css
@@ -20,16 +20,20 @@
   font-weight: 700;
   font-size: bolder;
 }
-.button1 {
-  border-radius: 20px 20px 30px;
-  padding: 32px 20px;
-  font-size: 30px;
-  /* border: 2px solid red;  */
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -ms-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-  /* width: 50px; */
-  color: 706B6C;
+.button {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  padding: 30px 40px;
+  font-size: 40px;
+  border: 2px solid red;
+  line-height: 40px;
+}
+
+.btn {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  border: 2px solid blue;
+  text-align: center;
 }
