--- a/style.css
+++ b/style.css
@@ -20,20 +20,53 @@
   font-weight: 700;
   font-size: bolder;
 }
-.button {
+
+.input_container {
+  /* border: 1px solid blue; */
   display: flex;
   justify-content: center;
-  text-align: center;
-  padding: 30px 40px;
-  font-size: 40px;
-  border: 2px solid red;
-  line-height: 40px;
+  margin-bottom: 20px;
+}
+
+.input_container > input {
+  width: 700px;
+  height: 80px;
+  border-radius: 40px 50px;
+  padding-left: 20px;
+  margin-top: 20px;
+  font-size: 18px;
+  color: rgb(108, 103, 104);
+}
+
+.btn_container {
+  /* border: 1px solid red; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 15px;
 }
 
 .btn {
+  padding: 10px 30px;
+  color: black;
+  border: none;
+  border-radius: 10px 12px;
+  border: 0.5px solid black;
+}
+
+.heading2 {
+  text-align: center;
+  margin-top: 70px;
+}
+
+.flex_container {
   display: flex;
-  flex-direction: row;
-  justify-content: center;
-  border: 2px solid blue;
+  gap: 20px;
+  margin-top: 60px;
+  /* border: 2px solid red; */
+  width: 100%;
+}
+
+.flex_container > .heading2 {
   text-align: center;
 }
