--- a/style.css
+++ b/style.css
@@ -61,12 +61,24 @@
 
 .flex_container {
   display: flex;
+  /* border: 1px solid blue; */
   gap: 20px;
-  margin-top: 60px;
-  /* border: 2px solid red; */
-  width: 100%;
+  width: 700px;
+  /* height: 200px; */
+  margin-top: 40px;
+  font-size: bolder;
+  justify-content: space-between;
+  margin: 20px 60px;
+  /* max-width: 500px; */
+  padding: 60px 60px;
+  /* line-height: 20px; */
 }
 
-.flex_container > .heading2 {
-  text-align: center;
+.Title .text_btn_container {
+  display: flex;
+  /* flex-direction: start; */
+  justify-content: center;
+  /* border: 1px solid red; */
+  gap: 65px;
+  justify-content: space-between;
 }
