--- a/style.css
+++ b/style.css
@@ -6,11 +6,26 @@
 
 .heading {
   text-align: center;
-  margin-top: 90px;
+  margin-top: 50px;
+  /* margin-bottom: 30px; */
   font-weight: 900;
   font-size: 30px;
   font-size: bolder;
   margin: 100px 40px;
+}
+
+.mean_heading {
+  /* display: flex; */
+  margin: 20px 10px;
+  /* border: 2px solid red; */
+}
+
+#BOD {
+  /* border: 2px solid black; */
+  margin: 30px 10px;
+  font-size: 15px;
+  padding: 15px 20px;
+  /* width: 0px; */
 }
 
 .para {
@@ -70,8 +85,6 @@
   text-overflow: none;
   width: 90%;
   margin: auto;
-  /* max-width: 500px; */
-  /* max-width: fit-content; */
 }
 
 .tutorials_div {
@@ -79,6 +92,7 @@
   flex-direction: row;
   justify-content: center;
   text-justify: center;
+  margin: 40px;
   /* border: 2px solid blue; */
 }
 
@@ -86,25 +100,34 @@
   width: 30%;
   margin: auto;
   /* border: 4px solid brown; */
-  padding: 10px 15px;
+  padding: 20px 5px;
 }
 
 .images_div {
-  width: 100%;
-  /* border: 1px solid red; */
-  /* margin: auto; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 15px;
+  padding-top: 40px;
+  border: 2px solid black;
+  margin: auto;
 }
 
 .images_div > img {
   width: 100%;
+  margin: 50px 40px;
   margin: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* border: 3px solid blue; */
 }
 
 .content {
   /* border: 2px solid blueviolet; */
   /* display: flex; */
-  margin: 10px 7px;
-  padding: 50px 25px;
+  margin: 10px 15px;
+  padding: 20px 25px;
 }
 
 .content > .text_btn_container {
